Don't set local heap to 0, and small updates for our actuator visibility

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
+# custom server port
+server.port=6001
 # expose all actuator endpoints
 management.endpoints.web.exposure.include=*
+# list all health actuator detail, e.g. disk space
+management.endpoint.health.show-details=always
+# want to highlight the temp folder for health / disk space check
+management.health.diskspace.path=/tmp
